--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -49,7 +49,7 @@
         gap: 1rem;
         img{
             box-shadow: 0 0 3px 5px #c7bfbf;
-            height: 7rem;
+            // height: 7rem;
             width: 100%;
         }
     }
@@ -65,6 +65,23 @@
             border-radius: 1rem;
             cursor: pointer;
 
+        }
+    }
+    .challenge-rsp{
+        padding: 1rem;
+        .rsp{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            justify-items: center;
+            img{
+                border-radius: 8px;
+                height: 10rem;
+                cursor: pointer;
+            }
+            img:hover{
+                box-shadow: 0 0 5px 8px #4d58ff;
+                border-radius: 8px;
+            }
         }
     }
 }
